SERVER-20395 ClusterFind::runQuery should read from primary if a collection became unsharded